--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <h1>Weather App</h1>
         <input type="text" id="city" placeholder="Enter city name">
+        <div id="suggestions"></div>
         <button id="search">Search</button>
         <div id="weather"></div>
     </div>
