--- a/RecipeFinder/index.html
+++ b/RecipeFinder/index.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="loading">Loading...</div>
     <div class="container">
         <h1>Recipe Finder</h1>
         <input type="text" id="ingredientInput" placeholder="Enter an ingredient">
